# graphical-context-extraction-pipeline

./: EXECUTIVE_SUMMARY.md  PHASE2_VASTAI_SETUP.md  README.md  deep-research-report.md
phase 1/: .gitignore  IMPLEMENTATION_SUMMARY.md  SETUP_VASTAI.md  VALIDATION_REPORT.md  example.py  pyproject.toml  requirements.txt  run.py
phase 1/XNQTWZ87K4I/: asr.json  keyframes.json  ocr.json  scenes.json  transcript.txt
phase 1/XNQTWZ87K4I/source/: metadata.json
phase 1/src/: __init__.py  config.py  pipeline.py
phase 1/src/extract/: __init__.py  asr.py  keyframes.py  ocr.py  scenes.py
phase 1/src/ingest/: __init__.py  downloader.py  normalize.py
phase 2/: .gitignore  IMPLEMENTATION_SUMMARY.md  README.md  docker-compose.yml  pyproject.toml  requirements.txt  run.py  setup_cloud.py
phase 2/output/XNQTWZ87K4I/: chunks.json  chunks.jsonl  chunks.parquet  timeline.json
phase 2/src/: __init__.py  aligner.py  chunker.py  config.py  embedder.py  enricher.py  exporter.py  loader.py  ocr_cleanup.py  pipeline.py  store.py  timeline.py
phase 3/: .gitignore  IMPLEMENTATION_SUMMARY.md  README.md  convert_summary_to_pdf.py  convert_to_pdf.py  pyproject.toml  requirements.txt  run.py
phase 3/src/: __init__.py  config.py  loader.py  ocr_overlay.py  pipeline.py  qa_generator.py  report_generator.py  validator.py
